feat: add game world minimal boilerplate

--- a/Engine.Editor/Engine.Editor.csproj
+++ b/Engine.Editor/Engine.Editor.csproj
@@ -9,13 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Engine.Rendering\Engine.Rendering.csproj" />
-    <ProjectReference Include="..\Engine.Worlds\Engine.Worlds.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Engine.Rendering\Engine.Rendering.csproj" />
+    <ProjectReference Include="..\Engine.Worlds\Engine.Worlds.csproj" />
+    <ProjectReference Include="..\Game.User\Game.User.csproj" />
   </ItemGroup>
 
 </Project>
