--- a/Engine.Worlds/Engine.Worlds.csproj
+++ b/Engine.Worlds/Engine.Worlds.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Silk.NET.Maths" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+      <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
   </ItemGroup>
 
 </Project>
