--- a/Engine.Testing/Engine.Testing.csproj
+++ b/Engine.Testing/Engine.Testing.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
+    <ProjectReference Include="..\Engine.Worlds\Engine.Worlds.csproj" />
   </ItemGroup>
 
 </Project>
