--- a/Engine.Worlds/Engine.Worlds.csproj
+++ b/Engine.Worlds/Engine.Worlds.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
   
   <ItemGroup>
-      <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
+    <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
+    <ProjectReference Include="..\Engine.User.Codegen\Engine.User.Codegen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
   
   <ItemGroup>
@@ -23,7 +24,6 @@
   
   <ItemGroup>
     <Folder Include="Components\" />
-    <Folder Include="Utilities\" />
   </ItemGroup>
 
 </Project>
