--- a/Engine.Editor/Engine.Editor.csproj
+++ b/Engine.Editor/Engine.Editor.csproj
@@ -10,10 +10,12 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+    <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\Engine.Input\Engine.Input.csproj" />
     <ProjectReference Include="..\Engine.Rendering\Engine.Rendering.csproj" />
     <ProjectReference Include="..\Engine.Worlds\Engine.Worlds.csproj" />
     <ProjectReference Include="..\Game.User\Game.User.csproj" />
