--- a/User.Game/User.Game.csproj
+++ b/User.Game/User.Game.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Engine.Input\Engine.Input.csproj" />
+    <ProjectReference Include="..\Engine.User.Contracts\Engine.User.Contracts.csproj" />
     <ProjectReference Include="..\Engine.Worlds\Engine.Worlds.csproj" />
     <ProjectReference Include="..\Engine.User.Codegen\Engine.User.Codegen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
