--- a/Engine.Core/Engine.Core.csproj
+++ b/Engine.Core/Engine.Core.csproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspectInjector.NET" Version="2.8.3" />
     <PackageReference Include="Silk.NET.Maths" Version="2.22.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="JetBrains.Annotations">
+      <HintPath>..\..\..\Software\JetBrains Rider 2025.1.1\lib\ReSharperHost\JetBrains.Annotations.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
