--- a/Engine.Rendering/Engine.Rendering.csproj
+++ b/Engine.Rendering/Engine.Rendering.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FontStashSharp" Version="1.3.10" />
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
   </ItemGroup>
