--- a/Engine.Input/Engine.Input.csproj
+++ b/Engine.Input/Engine.Input.csproj
@@ -10,5 +10,9 @@
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
+  </ItemGroup>
 
 </Project>
