feat: macos support

--- a/Engine.Editor/Engine.Editor.csproj
+++ b/Engine.Editor/Engine.Editor.csproj
@@ -23,15 +23,10 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\Engine.Input\Engine.Input.csproj" />
-    <ProjectReference Include="..\Engine.User.Contracts\Engine.User.Contracts.csproj" />
-    <ProjectReference Include="..\Engine.Worlds\Engine.Worlds.csproj" />
-    <ProjectReference Include="..\Engine.User.Codegen\Engine.User.Codegen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
-<!--    <ProjectReference Include="..\User.Game\User.Game.csproj" />-->
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Folder Include="Utilities\" />
+    <ProjectReference Include="../Engine.Input/Engine.Input.csproj" />
+    <ProjectReference Include="../Engine.User.Contracts/Engine.User.Contracts.csproj" />
+    <ProjectReference Include="../Engine.Worlds/Engine.Worlds.csproj" />
+    <ProjectReference Include="../Engine.User.Codegen/Engine.User.Codegen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
 
 </Project>
