--- a/Engine.Core/Engine.Core.csproj
+++ b/Engine.Core/Engine.Core.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspectInjector.NET" Version="2.8.3" />
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="10.0.0-preview.6.25358.103" />
     <PackageReference Include="Silk.NET.Maths" Version="2.22.0" />
   </ItemGroup>
