fix:camera speed

--- a/Engine.Assets/Engine.Assets.csproj
+++ b/Engine.Assets/Engine.Assets.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <Folder Include="Materials\UI\" />
+    <AdditionalFiles Include="Materials\Meshes\**\*.vert.glsl" />
+    <AdditionalFiles Include="Materials\Meshes\**\*.frag.glsl" />
   </ItemGroup>
 
   <ItemGroup>
