--- a/Engine.Worlds/Engine.Worlds.csproj
+++ b/Engine.Worlds/Engine.Worlds.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\Engine.Assets\Engine.Assets.csproj" />
     <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
     <ProjectReference Include="..\Engine.Input\Engine.Input.csproj" />
-    <ProjectReference Include="../Engine.Codegen/Engine.Codegen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+    <ProjectReference Include="..\Engine.Bindings\Engine.Bindings.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
     <ProjectReference Include="..\Engine.User.Codegen\Engine.User.Codegen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
   
