--- a/Engine.Core/Engine.Core.csproj
+++ b/Engine.Core/Engine.Core.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <InterceptorsNamespaces>$(InterceptorsNamespaces);Demo</InterceptorsNamespaces>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +20,10 @@
     <Reference Include="JetBrains.Annotations">
       <HintPath>..\..\..\Software\JetBrains Rider 2025.1.1\lib\ReSharperHost\JetBrains.Annotations.dll</HintPath>
     </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Communication\" />
   </ItemGroup>
 
 </Project>
