feat: more package shuffling

--- a/Engine.Core.EntitySystem/Engine.Core.EntitySystem.csproj
+++ b/Engine.Core.EntitySystem/Engine.Core.EntitySystem.csproj
@@ -18,7 +18,7 @@
     <ProjectReference Include="..\Engine.Core\Engine.Core.csproj" />
     <ProjectReference Include="..\Engine.Core.Input\Engine.Core.Input.csproj" />
     <ProjectReference Include="..\Engine.Native\Engine.Native.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
-    <ProjectReference Include="..\Engine.Roslyn\Engine.Roslyn.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
+    <ProjectReference Include="..\Engine.Tooling.Roslyn\Engine.Tooling.Roslyn.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
   
   <ItemGroup>
